--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="sidebar">
             <h2>项目导航 | Project Navigator</h2>
             <ul>
-                <li><button onclick="loadProject('splitlist')">📋 分割列表 | Splitlist</button></li>
-                <li><button onclick="loadProject('numberfilter')">🔢 数字过滤器 | Number Filter</button></li>
-                <li><button onclick="loadProject('2fa')">🔒 双因素认证 | 2FA</button></li>
-                <li><button onclick="loadProject('charcounter')">✍️ 字符计数器 | Character Counter</button></li>
+                <li><button onclick="loadProject('splitlist')">📋 List Splitter</button></li>
+                <li><button onclick="loadProject('numberfilter')">🔢 Number Filter</button></li>
+                <li><button onclick="loadProject('2fa')">🔒 2FA Auth</button></li>
+                <li><button onclick="loadProject('charcounter')">✍️ Character Counter</button></li>
             </ul>
         </div>
         <div class="content" id="content">
